fixed scrollbar width and horizontal scrollbar.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -253,8 +253,8 @@ pre {
   z-index: 1;
 }
 body::-webkit-scrollbar {
-  width:16px;
-  height: 16px;
+  width:12px;
+  height: 12px;
 }
 ::-webkit-scrollbar {
   background-color: #121212;
